feat: 회원통계 화면 및 쿼리 수정

--- a/module-admin/src/main/resources/templates/statistics/user.html
+++ b/module-admin/src/main/resources/templates/statistics/user.html
@@ -13,13 +13,14 @@
                                 <div class="col-lg-3 col-md-6 mb-3">
                                     <div class="mb-0 form-group row">
                                         <div class="form-label col-sm-12 col-form-label p-t-0 pb-1"><strong>키워드</strong></div>
-                                        <div class="input-group input-group-dropdown mb-0">
-                                            <select id="searchType" name="searchType" class="form-select form-control form-control-round custom-select left-select">
-                                                <option value="">- 선택 -</option>
-                                                <option value="email">아이디</option>
-                                                <option value="nickName">닉네임</option>
+                                        <div class="col-12">
+                                            <select name="searchYear" id="searchYear" class="form-select form-control form-control-round custom-select">
+                                                <option value="2024" selected>2024년</option>
+                                                <option value="2023">2023년</option>
+                                                <option value="2022">2022년</option>
+                                                <option value="2021">2021년</option>
+                                                <option value="2020">2020년</option>
                                             </select>
-                                            <input type="text" class="form-control form-control-round" id="searchKeyword" name="searchKeyword">
                                         </div>
                                     </div>
                                 </div>
