--- a/module-admin/src/main/resources/templates/common/index.html
+++ b/module-admin/src/main/resources/templates/common/index.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <html
+        xmlns:th="http://www.thymeleaf.org"
         xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
         layout:decorate="~{layout/main}">
 <div layout:fragment="content">
-    <div class="col-12">
+    <div class="col-12 m-b-20">
         <div class="ss-sub-header">
             <div class="ss-segmeneted-control ss-segmeneted-control--active">일간</div>
             <div class="ss-segmeneted-control">주간</div>
@@ -22,7 +23,7 @@
                 <div>
                     4
                     <svg width="8" height="6" viewBox="0 0 8 6" fill="none" xmlns="http://www.w3.org/2000/svg">
-                        <path d="M0 5.5L4 0.5L8 5.5H0Z" fill="currentColor" />
+                        <path d="M0 5.5L4 0.5L8 5.5H0Z" fill="currentColor"/>
                     </svg>
                 </div>
                 <div>32</div>
@@ -37,7 +38,7 @@
                 <div>
                     15
                     <svg width="8" height="6" viewBox="0 0 8 6" fill="none" xmlns="http://www.w3.org/2000/svg">
-                        <path d="M0 5.5L4 0.5L8 5.5H0Z" fill="currentColor" />
+                        <path d="M0 5.5L4 0.5L8 5.5H0Z" fill="currentColor"/>
                     </svg>
                 </div>
                 <div>120</div>
@@ -52,7 +53,7 @@
                 <div>
                     5
                     <svg width="8" height="6" viewBox="0 0 8 6" fill="none" xmlns="http://www.w3.org/2000/svg">
-                        <path d="M4 5.5L0 0.5H8L4 5.5Z" fill="currentColor" />
+                        <path d="M4 5.5L0 0.5H8L4 5.5Z" fill="currentColor"/>
                     </svg>
                 </div>
                 <div>17</div>
@@ -67,7 +68,7 @@
                 <div>
                     3
                     <svg width="8" height="6" viewBox="0 0 8 6" fill="none" xmlns="http://www.w3.org/2000/svg">
-                        <path d="M4 5.5L0 0.5H8L4 5.5Z" fill="currentColor" />
+                        <path d="M4 5.5L0 0.5H8L4 5.5Z" fill="currentColor"/>
                     </svg>
                 </div>
                 <div>1</div>
@@ -82,15 +83,16 @@
                 <div>방문자 수</div>
                 <div>3200</div>
                 <div>
-                    102<svg
-                        width="8"
-                        height="6"
-                        viewBox="0 0 8 6"
-                        fill="none"
-                        xmlns="http://www.w3.org/2000/svg"
-                >
-                    <path d="M0 5.5L4 0.5L8 5.5H0Z" fill="currentColor" />
-                </svg>
+                    102
+                    <svg
+                            width="8"
+                            height="6"
+                            viewBox="0 0 8 6"
+                            fill="none"
+                            xmlns="http://www.w3.org/2000/svg"
+                    >
+                        <path d="M0 5.5L4 0.5L8 5.5H0Z" fill="currentColor"/>
+                    </svg>
                 </div>
             </div>
             <ul>
@@ -121,18 +123,19 @@
                 <div>
                     <div>분양현황</div>
                     <div>
-                        <input type="text" value="2023" readonly /><svg
-                            width="24"
-                            height="24"
-                            viewBox="0 0 24 24"
-                            fill="none"
-                            xmlns="http://www.w3.org/2000/svg"
-                    >
-                        <path
-                                d="M6.71047 9.29344C6.32047 9.68344 6.32047 10.3134 6.71047 10.7034L11.3005 15.2934C11.6905 15.6834 12.3205 15.6834 12.7105 15.2934L17.3005 10.7034C17.6905 10.3134 17.6905 9.68344 17.3005 9.29344C16.9105 8.90344 16.2805 8.90344 15.8905 9.29344L12.0005 13.1734L8.12047 9.29344C7.73047 8.90344 7.09047 8.91344 6.71047 9.29344Z"
-                                fill="black"
-                        />
-                    </svg>
+                        <input type="text" value="2023" readonly/>
+                        <svg
+                                width="24"
+                                height="24"
+                                viewBox="0 0 24 24"
+                                fill="none"
+                                xmlns="http://www.w3.org/2000/svg"
+                        >
+                            <path
+                                    d="M6.71047 9.29344C6.32047 9.68344 6.32047 10.3134 6.71047 10.7034L11.3005 15.2934C11.6905 15.6834 12.3205 15.6834 12.7105 15.2934L17.3005 10.7034C17.6905 10.3134 17.6905 9.68344 17.3005 9.29344C16.9105 8.90344 16.2805 8.90344 15.8905 9.29344L12.0005 13.1734L8.12047 9.29344C7.73047 8.90344 7.09047 8.91344 6.71047 9.29344Z"
+                                    fill="black"
+                            />
+                        </svg>
                     </div>
                 </div>
                 <div>
@@ -366,28 +369,29 @@
                 </div>
                 <div class="latest-post-more">
                             <span>더보기</span
-                            ><svg
-                        width="24"
-                        height="24"
-                        viewBox="0 0 24 24"
-                        fill="none"
-                        xmlns="http://www.w3.org/2000/svg"
-                >
-                    <circle cx="12" cy="12" r="11" transform="rotate(90 12 12)" fill="#171A19" />
-                    <path
-                            d="M10.2221 7.74649C9.92597 8.04262 9.92597 8.52098 10.2221 8.81711L13.1682 11.7632L10.2221 14.7093C9.92597 15.0054 9.92597 15.4838 10.2221 15.7799C10.5182 16.076 10.9966 16.076 11.2927 15.7799L14.7779 12.2947C15.074 11.9986 15.074 11.5202 14.7779 11.2241L11.2927 7.7389C11.0042 7.45036 10.5182 7.45036 10.2221 7.74649Z"
-                            fill="white"
-                    />
-                </svg>
+                            >
+                    <svg
+                            width="24"
+                            height="24"
+                            viewBox="0 0 24 24"
+                            fill="none"
+                            xmlns="http://www.w3.org/2000/svg"
+                    >
+                        <circle cx="12" cy="12" r="11" transform="rotate(90 12 12)" fill="#171A19"/>
+                        <path
+                                d="M10.2221 7.74649C9.92597 8.04262 9.92597 8.52098 10.2221 8.81711L13.1682 11.7632L10.2221 14.7093C9.92597 15.0054 9.92597 15.4838 10.2221 15.7799C10.5182 16.076 10.9966 16.076 11.2927 15.7799L14.7779 12.2947C15.074 11.9986 15.074 11.5202 14.7779 11.2241L11.2927 7.7389C11.0042 7.45036 10.5182 7.45036 10.2221 7.74649Z"
+                                fill="white"
+                        />
+                    </svg>
                 </div>
             </div>
             <div class="latest-post-grid">
-                <div class="latest-post-grid-img"><img src="" alt="" /></div>
-                <div class="latest-post-grid-img"><img src="" alt="" /></div>
-                <div class="latest-post-grid-img"><img src="" alt="" /></div>
-                <div class="latest-post-grid-img"><img src="" alt="" /></div>
-                <div class="latest-post-grid-img"><img src="" alt="" /></div>
-                <div class="latest-post-grid-img"><img src="" alt="" /></div>
+                <div class="latest-post-grid-img"><img src="" alt=""/></div>
+                <div class="latest-post-grid-img"><img src="" alt=""/></div>
+                <div class="latest-post-grid-img"><img src="" alt=""/></div>
+                <div class="latest-post-grid-img"><img src="" alt=""/></div>
+                <div class="latest-post-grid-img"><img src="" alt=""/></div>
+                <div class="latest-post-grid-img"><img src="" alt=""/></div>
             </div>
         </div>
         <div class="ss-dashboard-grid-item white">
@@ -397,124 +401,51 @@
                 </div>
                 <div class="latest-post-more">
                             <span>더보기</span
-                            ><svg
-                        width="24"
-                        height="24"
-                        viewBox="0 0 24 24"
-                        fill="none"
-                        xmlns="http://www.w3.org/2000/svg"
-                >
-                    <circle cx="12" cy="12" r="11" transform="rotate(90 12 12)" fill="#171A19" />
-                    <path
-                            d="M10.2221 7.74649C9.92597 8.04262 9.92597 8.52098 10.2221 8.81711L13.1682 11.7632L10.2221 14.7093C9.92597 15.0054 9.92597 15.4838 10.2221 15.7799C10.5182 16.076 10.9966 16.076 11.2927 15.7799L14.7779 12.2947C15.074 11.9986 15.074 11.5202 14.7779 11.2241L11.2927 7.7389C11.0042 7.45036 10.5182 7.45036 10.2221 7.74649Z"
-                            fill="white"
-                    />
-                </svg>
+                            >
+                    <svg
+                            width="24"
+                            height="24"
+                            viewBox="0 0 24 24"
+                            fill="none"
+                            xmlns="http://www.w3.org/2000/svg"
+                    >
+                        <circle cx="12" cy="12" r="11" transform="rotate(90 12 12)" fill="#171A19"/>
+                        <path
+                                d="M10.2221 7.74649C9.92597 8.04262 9.92597 8.52098 10.2221 8.81711L13.1682 11.7632L10.2221 14.7093C9.92597 15.0054 9.92597 15.4838 10.2221 15.7799C10.5182 16.076 10.9966 16.076 11.2927 15.7799L14.7779 12.2947C15.074 11.9986 15.074 11.5202 14.7779 11.2241L11.2927 7.7389C11.0042 7.45036 10.5182 7.45036 10.2221 7.74649Z"
+                                fill="white"
+                        />
+                    </svg>
                 </div>
             </div>
             <div class="admin-board">
                 <ul>
-                    <li>
+                    <li th:each="adminPost : ${adminPosts}">
                         <div>
-                            <div class="admin-board-type">새로운식구</div>
-                            <div class="admin-board-post">
-                                <div>
-                                    <p>새로운 아이를 입양하려는데 의심스러워요</p>
+                            <div>
+                                <div class="admin-board-type" th:text="${adminPost.category}">제목</div>
+                                <!--<div class="admin-board-type completed"></div> 답변 완료된경우-->
+                                <div class="admin-board-post">
+                                    <div>
+                                        <p th:text="${adminPost.title}"></p>
+                                        <!--<div class="reply-complete">답변완료</div>-->
+                                    </div>
+                                    <span th:text="${#dates.format(adminPost.createdAt 'yyyy-MM-dd')}"></span>
                                 </div>
-                                <span>2023.05.25</span>
                             </div>
-                        </div>
-                        <div>
-                            <svg
-                                    width="24"
-                                    height="26"
-                                    viewBox="0 0 24 26"
-                                    fill="none"
-                                    xmlns="http://www.w3.org/2000/svg"
-                            >
-                                <path
-                                        d="M9.29055 7.27137C8.90055 7.69387 8.90055 8.37637 9.29055 8.79887L13.1705 13.0022L9.29055 17.2055C8.90055 17.628 8.90055 18.3105 9.29055 18.733C9.68055 19.1555 10.3105 19.1555 10.7005 18.733L15.2905 13.7605C15.6805 13.338 15.6805 12.6555 15.2905 12.233L10.7005 7.26053C10.3205 6.84887 9.68055 6.84887 9.29055 7.27137Z"
-                                        fill="#171A19"
-                                />
-                            </svg>
-                        </div>
-                    </li>
-                    <li>
-                        <div>
-                            <div class="admin-board-type">새로운식구</div>
-                            <div class="admin-board-post">
-                                <div>
-                                    <p>새로운 아이를 입양하려는데 의심스러워요</p>
-                                </div>
-                                <span>2023.05.25</span>
+                            <div>
+                                <svg
+                                        width="24"
+                                        height="26"
+                                        viewBox="0 0 24 26"
+                                        fill="none"
+                                        xmlns="http://www.w3.org/2000/svg"
+                                >
+                                    <path
+                                            d="M9.29055 7.27137C8.90055 7.69387 8.90055 8.37637 9.29055 8.79887L13.1705 13.0022L9.29055 17.2055C8.90055 17.628 8.90055 18.3105 9.29055 18.733C9.68055 19.1555 10.3105 19.1555 10.7005 18.733L15.2905 13.7605C15.6805 13.338 15.6805 12.6555 15.2905 12.233L10.7005 7.26053C10.3205 6.84887 9.68055 6.84887 9.29055 7.27137Z"
+                                            fill="#171A19"
+                                    />
+                                </svg>
                             </div>
-                        </div>
-                        <div>
-                            <svg
-                                    width="24"
-                                    height="26"
-                                    viewBox="0 0 24 26"
-                                    fill="none"
-                                    xmlns="http://www.w3.org/2000/svg"
-                            >
-                                <path
-                                        d="M9.29055 7.27137C8.90055 7.69387 8.90055 8.37637 9.29055 8.79887L13.1705 13.0022L9.29055 17.2055C8.90055 17.628 8.90055 18.3105 9.29055 18.733C9.68055 19.1555 10.3105 19.1555 10.7005 18.733L15.2905 13.7605C15.6805 13.338 15.6805 12.6555 15.2905 12.233L10.7005 7.26053C10.3205 6.84887 9.68055 6.84887 9.29055 7.27137Z"
-                                        fill="#171A19"
-                                />
-                            </svg>
-                        </div>
-                    </li>
-                    <li>
-                        <div>
-                            <div class="admin-board-type completed">새로운식구</div>
-                            <div class="admin-board-post">
-                                <div>
-                                    <p>새로운 아이를 입양하려는데 의심스러워요</p>
-                                    <div class="reply-complete">답변완료</div>
-                                </div>
-
-                                <span>2023.05.25</span>
-                            </div>
-                        </div>
-                        <div>
-                            <svg
-                                    width="24"
-                                    height="26"
-                                    viewBox="0 0 24 26"
-                                    fill="none"
-                                    xmlns="http://www.w3.org/2000/svg"
-                            >
-                                <path
-                                        d="M9.29055 7.27137C8.90055 7.69387 8.90055 8.37637 9.29055 8.79887L13.1705 13.0022L9.29055 17.2055C8.90055 17.628 8.90055 18.3105 9.29055 18.733C9.68055 19.1555 10.3105 19.1555 10.7005 18.733L15.2905 13.7605C15.6805 13.338 15.6805 12.6555 15.2905 12.233L10.7005 7.26053C10.3205 6.84887 9.68055 6.84887 9.29055 7.27137Z"
-                                        fill="#171A19"
-                                />
-                            </svg>
-                        </div>
-                    </li>
-                    <li>
-                        <div>
-                            <div class="admin-board-type">새로운식구</div>
-                            <div class="admin-board-post">
-                                <div>
-                                    <p>새로운 아이를 입양하려는데 의심스러워요</p>
-                                </div>
-
-                                <span>2023.05.25</span>
-                            </div>
-                        </div>
-                        <div>
-                            <svg
-                                    width="24"
-                                    height="26"
-                                    viewBox="0 0 24 26"
-                                    fill="none"
-                                    xmlns="http://www.w3.org/2000/svg"
-                            >
-                                <path
-                                        d="M9.29055 7.27137C8.90055 7.69387 8.90055 8.37637 9.29055 8.79887L13.1705 13.0022L9.29055 17.2055C8.90055 17.628 8.90055 18.3105 9.29055 18.733C9.68055 19.1555 10.3105 19.1555 10.7005 18.733L15.2905 13.7605C15.6805 13.338 15.6805 12.6555 15.2905 12.233L10.7005 7.26053C10.3205 6.84887 9.68055 6.84887 9.29055 7.27137Z"
-                                        fill="#171A19"
-                                />
-                            </svg>
                         </div>
                     </li>
                 </ul>
